# hunchly-maltego

./: .gitignore  README.md  build.sh  hunchly-local.mtz  hunchly-maltego.spec  pyproject.toml  setup.bat  setup.sh
.github/workflows/: build.yml
hunchly_maltego/: __init__.py  api.py  cli.py  config.py  entities.py  extensions.py  project.py
hunchly_maltego/resources/: version.properties
hunchly_maltego/resources/Entities/: hunchly.HunchlyCase.entity  hunchly.HunchlyData.entity  hunchly.HunchlyPage.entity  hunchly.HunchlyPhoto.entity  hunchly.HunchlySelector.entity  hunchly.HunchlyTag.entity
hunchly_maltego/resources/EntityCategories/: hunchly.category
hunchly_maltego/resources/Machines/: hunchly_HunchlyFullCaseExtraction.machine  hunchly_HunchlyFullCaseExtraction.properties
hunchly_maltego/resources/TransformSets/: hunchly transforms.set
hunchly_maltego/transforms/: get_data.py  get_pages.py  get_photo_exif.py  get_photos.py  get_selectors.py  keyword_search.py
